1) упростил build файл 2) подготовил build файл к запуску Sonar 3) рефакторинг и исправление ошибок 4) сохранил на svn конфигурации PMD и FindBugs
git-svn-id: https://share.curs.ru/svn/showcase/trunk@2703 322482b4-72a2-ae44-8c81-ef1a4f415bef